Позиционирование чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           >
           <ul class="site-nav list">
             <li class="site-nav-item">
-              <a class="site-nav-list current link" href="./index.html"
+              <a class="site-nav-list link current" href="./index.html"
                 >Студия</a
               >
             </li>
@@ -139,34 +139,38 @@
       </section>
 
       <!--Чем мы занимаемся-->
+
       <section class="section">
         <div class="container">
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="working-list list">
             <li class="item">
               <img
-                class="image-2"
+                class="working-list-image"
                 src="./images/Technology/box1.jpg"
                 alt="Десктопные приложения"
                 width="370"
+                height="294"
               />
               <h3 class="working-list-item">Десктопные приложения</h3>
             </li>
             <li class="item">
               <img
-                class="image-2"
+                class="working-list-image"
                 src="./images/Technology/box2.jpg"
                 alt="Мобильные приложения"
                 width="370"
+                height="294"
               />
               <h3 class="working-list-item">Мобильные приложения</h3>
             </li>
             <li class="item">
               <img
-                class="image-2"
+                class="working-list-image"
                 src="./images/Technology/box3.jpg"
                 alt="Дизайнерские решения"
                 width="370"
+                height="294"
               />
               <h3 class="working-list-item">Дизайнерские решения</h3>
             </li>
