--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
               <a class="site-nav-list link" href="./index.html">Студия</a>
             </li>
             <li class="site-nav-item">
-              <a class="site-nav-list current link" href="./portfolio.html"
+              <a class="site-nav-list link current" href="./portfolio.html"
                 >Портфолио</a
               >
             </li>
