--- a/portfolio.html
+++ b/portfolio.html
@@ -92,165 +92,182 @@
           <ul class="card-list list">
             <li class="card-list-number">
               <a class="link" href="">
-                <img
-                  src="./images/Pictures/picture1.jpg"
-                  alt="Ноутбук c cайтом"
-                />
-                <div class="card-content">
-                  <h2 class="card-list-item">Технохряк</h2>
-                  <p class="text">Веб-сайт</p>
-                  <p hidden class="text-popup">
+                <div class="card-list-wrapper">
+                  <img
+                    src="./images/Pictures/picture1.jpg"
+                    alt="Ноутбук c cайтом"
+                  />
+                  <p class="text-popup">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
+                <div class="card-content">
+                  <h2 class="card-list-item">Технохряк</h2>
+                  <p class="text">Веб-сайт</p>
+                </div>
               </a>
             </li>
 
             <li class="card-list-number">
               <a class="link" href="">
-                <img
-                  src="./images/Pictures/picture2.jpg"
-                  alt="Изображения баскетболистов"
-                />
+                <div class="card-list-wrapper">
+                  <img
+                    src="./images/Pictures/picture2.jpg"
+                    alt="Изображения баскетболистов"
+                  />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">
                     Постер New Orlean vs Golden Star
                   </h2>
                   <p class="text">Дизайн</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odit error repudiandae, unde labore tempora repellendus
-                    dolorum debitis repellat laboriosam quibusdam! Reiciendis
-                    molestiae ex ullam nihil recusandae accusantium dignissimos.
-                    Quos, enim!
-                  </p>
                 </div>
               </a>
             </li>
             <li class="card-list-number">
               <a class="link" href="">
-                <img
-                  src="./images/Pictures/picture3.jpg"
-                  alt="Ресторан Seafood"
-                />
+                <div class="card-list-wrapper">
+                  <img
+                    src="./images/Pictures/picture3.jpg"
+                    alt="Ресторан Seafood"
+                  />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">Ресторан Seafood</h2>
                   <p class="text">Приложение</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odit error repudiandae, unde labore tempora repellendus
-                    dolorum debitis repellat laboriosam quibusdam! Reiciendis
-                    molestiae ex ullam nihil recusandae accusantium dignissimos.
-                    Quos, enim!
-                  </p>
                 </div>
               </a>
             </li>
 
             <li class="card-list-number">
               <a class="link" href="">
-                <img src="./images/Pictures/picture4.jpg" alt="Проект Prime" />
+                <div class="card-list-wrapper">
+                  <img
+                    src="./images/Pictures/picture4.jpg"
+                    alt="Проект Prime"
+                  />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">Проект Prime</h2>
                   <p class="text">Маркетинг</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odit error repudiandae, unde labore tempora repellendus
-                    dolorum debitis repellat laboriosam quibusdam! Reiciendis
-                    molestiae ex ullam nihil recusandae accusantium dignissimos.
-                    Quos, enim!
-                  </p>
                 </div>
               </a>
             </li>
 
             <li class="card-list-number">
               <a class="link" href="">
-                <img src="./images/Pictures/picture5.jpg" alt="Проект Boxes" />
+                <div class="card-list-wrapper">
+                  <img
+                    src="./images/Pictures/picture5.jpg"
+                    alt="Проект Boxes"
+                  />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">Проект Boxes</h2>
                   <p class="text">Приложение</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odit error repudiandae, unde labore tempora repellendus
-                    dolorum debitis repellat laboriosam quibusdam! Reiciendis
-                    molestiae ex ullam nihil recusandae accusantium dignissimos.
-                    Quos, enim!
-                  </p>
                 </div>
               </a>
             </li>
 
             <li class="card-list-number">
               <a class="link" href="">
-                <img src="./images/Pictures/picture6.jpg" alt="Веб сайт" />
+                <div class="card-list-wrapper">
+                  <img src="./images/Pictures/picture6.jpg" alt="Веб сайт" />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">Inspiration has no Borders</h2>
                   <p class="text">Веб сайт</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Delectus vitae asperiores quam quo vel necessitatibus cum
-                    voluptatibus error, veniam laboriosam incidunt in veritatis
-                    numquam, fugiat nihil, corporis enim? Veniam, culpa.
-                  </p>
                 </div>
               </a>
             </li>
 
             <li class="card-list-number">
               <a class="link" href="">
-                <img
-                  src="./images/Pictures/picture7.jpg"
-                  alt="Издание Limited Edition"
-                />
+                <div class="card-list-wrapper">
+                  <img
+                    src="./images/Pictures/picture7.jpg"
+                    alt="Издание Limited Edition"
+                  />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">Издание Limited Edition</h2>
                   <p class="text">Дизайн</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odit error repudiandae, unde labore tempora repellendus
-                    dolorum debitis repellat laboriosam quibusdam! Reiciendis
-                    molestiae ex ullam nihil recusandae accusantium dignissimos.
-                    Quos, enim!
-                  </p>
                 </div>
               </a>
             </li>
 
             <li class="card-list-number">
               <a class="link" href="">
-                <img src="./images/Pictures/picture8.jpg" alt="Проект LAB" />
+                <div class="card-list-wrapper">
+                  <img src="./images/Pictures/picture8.jpg" alt="Проект LAB" />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">Проект LAB</h2>
                   <p class="text">Маркетинг</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odit error repudiandae, unde labore tempora repellendus
-                    dolorum debitis repellat laboriosam quibusdam! Reiciendis
-                    molestiae ex ullam nihil recusandae accusantium dignissimos.
-                    Quos, enim!
-                  </p>
                 </div>
               </a>
             </li>
             <li class="card-list-number">
               <a class="link" href="">
-                <img
-                  src="./images/Pictures/picture9.jpg"
-                  alt="Growing Business"
-                />
+                <div class="card-list-wrapper">
+                  <img
+                    src="./images/Pictures/picture9.jpg"
+                    alt="Growing Business"
+                  />
+                  <p class="text-popup">
+                    Технокряк это современная площадка распространения
+                    коронавируса. Компании используют эту платформу для
+                    цифрового шпионажа и атак на защищённые сервера конкурентов.
+                  </p>
+                </div>
+
                 <div class="card-content">
                   <h2 class="card-list-item">Growing Business</h2>
                   <p class="text">Приложение</p>
-                  <p hidden class="text-popup">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Odit error repudiandae, unde labore tempora repellendus
-                    dolorum debitis repellat laboriosam quibusdam! Reiciendis
-                    molestiae ex ullam nihil recusandae accusantium dignissimos.
-                    Quos, enim!
-                  </p>
                 </div>
               </a>
             </li>
