--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             Эффективные решения <br />
             для вашего бизнеса
           </h1>
-          <button type="button" class="modal-btn">Заказать услугу</button>
+          <button type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
 
