--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <main>
       <!--Герой-->
       <section class="hero">
-        <div class="container-hero">
+        <div class="container">
           <h1 class="hero-item">
             Эффективные решения <br />
             для вашего бизнеса
